[gd_scene load_steps=4 format=3 uid="uid://blxdxumikn588"]

[ext_resource type="Script" uid="uid://cdtn2obfrgajv" path="res://Scripts/game_ui.gd" id="1_game_ui_script"]
[ext_resource type="Texture2D" uid="uid://xl482b5u3spv" path="res://Assets/Sprites/UIElements/time_icon.png" id="2_time_icon"]
[ext_resource type="FontFile" uid="uid://c2skhaypr31sj" path="res://Assets/Fonts/digital-7 (mono).ttf" id="3_digital_font"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -140.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 50.0
grow_horizontal = 0
script = ExtResource("1_game_ui_script")

[node name="ClockContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="TimeIcon" type="TextureRect" parent="ClockContainer"]
layout_mode = 2
texture = ExtResource("2_time_icon")
expand_mode = 3
stretch_mode = 5

[node name="TimeLabel" type="Label" parent="ClockContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("3_digital_font")
theme_override_font_sizes/font_size = 20
text = "09:00"
horizontal_alignment = 2
vertical_alignment = 1
